--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "flowbite": "^1.8.1",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
+        "postcss-nesting": "^12.0.1",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     }
