--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss-nesting": "^12.0.1",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.13.1"
     }
 }
